--- a/servisoft/src/main/resources/templates/fragments/template.html
+++ b/servisoft/src/main/resources/templates/fragments/template.html
@@ -61,8 +61,10 @@
                                 <i class="fas fa-file-invoice me-2"></i>Facturación
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="facturacionDropdown">
-                                <li><a class="dropdown-item" th:href="@{/facturacion/nueva}"
-                                        data-mdb-ripple-init>Facturar</a></li>
+                                <li><a class="dropdown-item" th:href="@{/facturacion/individual}"
+                                        data-mdb-ripple-init>Facturación Individual</a></li>
+                                <li><a class="dropdown-item" th:href="@{/facturacion/masiva}"
+                                        data-mdb-ripple-init>Facturación Masiva</a></li>
                                 <li><a class="dropdown-item" th:href="@{/facturacion/consulta}"
                                         data-mdb-ripple-init>Consulta de facturación</a></li>
                             </ul>
