--- a/servisoft/src/main/resources/templates/fragments/template.html
+++ b/servisoft/src/main/resources/templates/fragments/template.html
@@ -21,7 +21,7 @@
             <div class="container-fluid">
 
                 <!-- Brand -->
-                <a class="navbar-brand d-flex align-items-center" href="#">
+                <a class="navbar-brand d-flex align-items-center" th:href="@{/home}">
                     <img th:src="@{/img/logo.png}" alt="ServiSoft" width="40" height="40"
                         class="me-2 rounded-circle shadow-1-strong">
                     <span class="fw-bold text-light">ServiSoft</span>
