--- a/servisoft/src/main/resources/templates/cuentas/formulario.html
+++ b/servisoft/src/main/resources/templates/cuentas/formulario.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{template :: head}"></head>
+<head th:replace="~{fragments/template :: head}"></head>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <body class="d-flex flex-column min-vh-100">
-    <header th:replace="~{template :: navbar}"></header>
+    <header th:replace="~{fragments/template :: navbar}"></header>
 
     <main class="flex-fill">
         <div class="container my-5">
