--- a/servisoft/src/main/resources/templates/cuentas/lista.html
+++ b/servisoft/src/main/resources/templates/cuentas/lista.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{template :: head}"></head>
+<head th:replace="~{fragments/template :: head}"></head>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <body class="d-flex flex-column min-vh-100">
-    <header th:replace="~{template :: navbar}"></header>
+    <header th:replace="~{fragments/template :: navbar}"></header>
 
     <main class="flex-fill">
         <div class="container my-5">
@@ -91,9 +91,9 @@
         </div>
     </main>
 
-    <footer th:replace="~{template :: footer}"></footer>
+    <footer th:replace="~{fragments/template :: footer}"></footer>
 
-    <th:block th:replace="~{template :: scripts}"></th:block>
+    <th:block th:replace="~{fragments/template :: scripts}"></th:block>
 
     <!-- Modal para mensajes de confirmación y respuestas -->
     <div class="modal fade" id="modalMensaje" tabindex="-1" aria-hidden="true">
