Se linkearon algunos componentes

--- a/servisoft/src/main/resources/templates/home.html
+++ b/servisoft/src/main/resources/templates/home.html
@@ -144,8 +144,8 @@
                                 <p class="card-text text-muted mb-4">
                                     Administra y gestiona todas tus cuentas de clientes.
                                 </p>
-                                <a href="#" class="btn btn-outline-purple disabled">
-                                    Próximamente <i class="fas fa-arrow-right ms-2"></i>
+                                <a href="/cuentas" class="btn btn-outline-purple">
+                                    Acceder <i class="fas fa-arrow-right ms-2"></i>
                                 </a>
                             </div>
                         </div>
