Se realizo el Pago Total

--- a/servisoft/src/main/resources/templates/fragments/template.html
+++ b/servisoft/src/main/resources/templates/fragments/template.html
@@ -71,7 +71,7 @@
                         </li>
 
                         <li class="nav-item mx-1">
-                            <a class="nav-link" th:href="@{/pagos}" data-mdb-ripple-init>
+                            <a class="nav-link" th:href="@{/pago/vista}" data-mdb-ripple-init>
                                 <i class="fas fa-credit-card me-2"></i>Pagos
                             </a>
                         </li>
