--- a/servisoft/src/main/resources/templates/home.html
+++ b/servisoft/src/main/resources/templates/home.html
@@ -198,8 +198,8 @@
                                 <p class="card-text text-muted mb-4">
                                     Registro y seguimiento de pagos recibidos.
                                 </p>
-                                <a href="#" class="btn btn-outline-purple disabled">
-                                    Próximamente <i class="fas fa-arrow-right ms-2"></i>
+                                <a href="pago/vista" class="btn btn-outline-purple">
+                                    Acceder <i class="fas fa-arrow-right ms-2"></i>
                                 </a>
                             </div>
                         </div>
