Se integro el modulo de Pagos Y Servicios al Sistema

--- a/servisoft/src/main/resources/templates/home.html
+++ b/servisoft/src/main/resources/templates/home.html
@@ -180,8 +180,8 @@
                                 <p class="card-text text-muted mb-4">
                                     Catálogo y configuración de servicios disponibles.
                                 </p>
-                                <a href="#" class="btn btn-outline-purple disabled">
-                                    Próximamente <i class="fas fa-arrow-right ms-2"></i>
+                                <a href="/servicios" class="btn btn-outline-purple">
+                                    Acceder <i class="fas fa-arrow-right ms-2"></i>
                                 </a>
                             </div>
                         </div>
