--- a/servisoft/src/main/resources/templates/fragments/template.html
+++ b/servisoft/src/main/resources/templates/fragments/template.html
@@ -38,7 +38,7 @@
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
 
                         <li class="nav-item mx-1">
-                            <a class="nav-link" th:href="@{/clientes}" data-mdb-ripple-init>
+                            <a class="nav-link" th:href="@{/proximamente}" data-mdb-ripple-init>
                                 <i class="fas fa-users me-2"></i>Clientes
                             </a>
                         </li>
@@ -77,7 +77,7 @@
                         </li>
 
                         <li class="nav-item mx-1">
-                            <a class="nav-link" th:href="@{/reportes}" data-mdb-ripple-init>
+                            <a class="nav-link" th:href="@{/proximamente}" data-mdb-ripple-init>
                                 <i class="fas fa-chart-bar me-2"></i>Reportes
                             </a>
                         </li>
@@ -122,7 +122,7 @@
                     <ul class="list-unstyled">
                         <li><a th:href="@{/home}" class="text-white-50 text-decoration-none"
                                 data-mdb-ripple-init>Inicio</a></li>
-                        <li><a th:href="@{/clientes}" class="text-white-50 text-decoration-none"
+                        <li><a th:href="@{/proximamente}" class="text-white-50 text-decoration-none"
                                 data-mdb-ripple-init>Clientes</a></li>
                         <li><a th:href="@{/cuentas}" class="text-white-50 text-decoration-none"
                                 data-mdb-ripple-init>Cuentas</a></li>
