Se ajustaron algunos enlaces

--- a/servisoft/src/main/resources/templates/home.html
+++ b/servisoft/src/main/resources/templates/home.html
@@ -162,8 +162,8 @@
                                 <p class="card-text text-muted mb-4">
                                     Directorio completo de clientes y sus datos fiscales.
                                 </p>
-                                <a href="#" class="btn btn-outline-purple disabled">
-                                    Próximamente <i class="fas fa-arrow-right ms-2"></i>
+                                <a href="/clientes" class="btn btn-outline-purple">
+                                    Acceder <i class="fas fa-arrow-right ms-2"></i>
                                 </a>
                             </div>
                         </div>
