Implementacion de Anulacion de Facturas implmentada

--- a/servisoft/src/main/resources/templates/fragments/template.html
+++ b/servisoft/src/main/resources/templates/fragments/template.html
@@ -66,7 +66,9 @@
                                 <li><a class="dropdown-item" th:href="@{/facturacion/masiva}"
                                         data-mdb-ripple-init>Facturación Masiva</a></li>
                                 <li><a class="dropdown-item" th:href="@{/facturacion/consulta}"
-                                        data-mdb-ripple-init>Consulta de facturación</a></li>
+                                        data-mdb-ripple-init>Consulta de Facturación</a></li>
+                                <li><a class="dropdown-item" th:href="@{/facturacion/anulacion}"
+                                        data-mdb-ripple-init>Anulacion de Factura</a></li>
                             </ul>
                         </li>
 
