--- a/servisoft/src/main/resources/templates/facturacion/facturacion-consulta.html
+++ b/servisoft/src/main/resources/templates/facturacion/facturacion-consulta.html
@@ -87,10 +87,19 @@
                                             $1,500.00
                                         </td>
                                         <td class="text-center">
+                                            <!-- Botón para ver factura -->
                                             <a th:href="@{/facturacion/detalle/{id}(id=${factura.idFactura})}"
-                                                class="btn btn-purple btn-sm" data-mdb-ripple-init>
-                                                <i class="fas fa-eye me-1"></i>Detalles
+                                                class="btn btn-sm btn-purple" data-mdb-ripple-init title="Ver factura">
+                                                <i class="fas fa-file-invoice"></i>
                                             </a>
+                                            
+                                            <!-- Botón para ver nota de crédito (solo si está anulada) -->
+                                            <th:block th:if="${factura.estado.name() == 'ANULADA'}">
+                                                <a th:href="@{/facturacion/nota-credito/{id}(id=${factura.idFactura})}"
+                                                    class="btn btn-sm btn-outline-purple" data-mdb-ripple-init title="Ver nota de crédito">
+                                                    <i class="fas fa-undo"></i>
+                                                </a>
+                                            </th:block>
                                         </td>
                                     </tr>
 
