--- a/servisoft/src/main/resources/templates/facturacion/facturacion-anulacion.html
+++ b/servisoft/src/main/resources/templates/facturacion/facturacion-anulacion.html
@@ -13,7 +13,7 @@
     <main class="flex-fill">
         <div class="container my-5">
 
-            <h2 class="mb-4 text-purple-dark">Anulación de Facturación</h2>
+            <h2 class="mb-4 text-purple-dark">Anulación de Factura</h2>
 
             <div th:if="${error}" class="alert alert-danger" role="alert">
                 <i class="fas fa-exclamation-triangle me-2"></i>
