--- a/servisoft/src/main/resources/templates/facturacion/facturacion-nota-credito.html
+++ b/servisoft/src/main/resources/templates/facturacion/facturacion-nota-credito.html
@@ -32,23 +32,28 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-6">
-                            <!-- Fecha de Emisión -->
+                            <!-- Número de Comprobante -->
                             <div class="mb-3">
+                                <label class="form-label text-muted small mb-1">Nº de Comprobante</label>
+                                <p class="mb-0 h5 text-purple-dark fw-bold" th:text="${notaDeCredito.nroComprobante}">0001-00000023</p>
+                            </div>
+                            <!-- Fecha de Emisión -->
+                            <div class="mb-0">
                                 <label class="form-label text-muted small mb-1">Fecha de Emisión</label>
                                 <p class="mb-0 fw-bold" th:text="${#temporals.format(notaDeCredito.fechaEmision, 'dd/MM/yyyy')}">01/01/2025</p>
                             </div>
+                        </div>
+                        <div class="col-md-6">
                             <!-- Monto -->
-                            <div class="mb-0">
+                            <div class="mb-3">
                                 <label class="form-label text-muted small mb-1">Monto Ajustado</label>
                                 <p class="mb-0 h5 text-danger fw-bold" 
                                    th:text="'$' + ${#numbers.formatDecimal(notaDeCredito.monto, 1, 'POINT', 2, 'COMMA')}">
                                     $1,500.00
                                 </p>
                             </div>
-                        </div>
-                        <div class="col-md-6">
                             <!-- Tipo de Comprobante -->
-                            <div class="mb-3">
+                            <div class="mb-0">
                                 <label class="form-label text-muted small mb-1">Tipo de Comprobante</label>
                                 <p class="mb-0 h5 text-purple-dark fw-bold" 
                                    th:if="${notaDeCredito.tipoComprobante != null}"
